# gemini-motion-lab-starter

./: .gitignore  DEPLOYMENT.md  PLAN_QR_VIDEO_COMPOSITION.md  billing-enablement.py  codelab-sample.md  codelab.md  init.sh  setup.sh  training-deck.html
backend/: .dockerignore  Dockerfile  pyproject.toml  test_gemini_service.py  test_nano_banana.py  test_veo.py
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: avatar_generation.py  motion_analysis.py  video_generation.py
backend/app/routers/: analyze.py  apple_wallet.py  avatar.py  generate.py  queue.py  share.py  status.py  upload.py  wallet.py
backend/app/services/: gemini_service.py  nano_banana_service.py  pipeline.py  pose_service.py  storage_service.py  veo_service.py  video_utils.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/demos/: README.md
frontend/src/: App.tsx  index.css  mockData.ts  types.ts
frontend/src/components/: AvatarStyleCard.tsx  CountdownTimer.tsx  ProgressRing.tsx  ShowcaseGallery.tsx
frontend/src/hooks/: useApi.ts  useCamera.ts
frontend/src/screens/: AvatarStyleScreen.tsx  DemoScreen.tsx  LocationThemeScreen.tsx  ProcessingScreen.tsx  QueueFullScreen.tsx  RecordScreen.tsx  ResultScreen.tsx  ShareScreen.tsx  WelcomeScreen.tsx
scripts/: generate_showcase.py  regen_watercolor2.py
